# ScreamFortressChecker

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
data/: item_list.pkl
src/: app.py
src/templates/: index.html
